--- a/ansible/kubernetes.yaml
+++ b/ansible/kubernetes.yaml
@@ -4,6 +4,7 @@
   - include: _hosts.yaml
     when: modify_hosts_file|bool == true
   - include: _certs.yaml
+  - include: _certs-etcd.yaml
   - include: _packages.yaml
     when: allow_package_installation|bool == true
   # etcd
