--- a/ansible/upgrade-preflight.yaml
+++ b/ansible/upgrade-preflight.yaml
@@ -1,5 +1,5 @@
 ---
   # make sure repos cache is updated
-  - include: _packages.yaml
+  - include: _packages-repo.yaml
     when: allow_package_installation|bool == true
   - include: _upgrade-preflight.yaml
