--- a/ansible/kubernetes.yaml
+++ b/ansible/kubernetes.yaml
@@ -5,7 +5,7 @@
     when: modify_hosts_file|bool == true
   - include: _certs.yaml
   - include: _certs-etcd.yaml
-  - include: _packages.yaml
+  - include: _packages-repo.yaml
     when: allow_package_installation|bool == true
   # etcd
   - include: _etcd-k8s.yaml
