--- a/ansible/_etcd-transition.yaml
+++ b/ansible/_etcd-transition.yaml
@@ -1,7 +1,7 @@
 ---
   - hosts: etcd
     any_errors_fatal: true
-    name: "Temporarily Install Transtion Etcd 3.x version"
+    name: "Temporarily Install Transition Etcd 3.x version"
     serial: 1 # need to always do this serially
     remote_user: root
     become_method: sudo
@@ -10,8 +10,11 @@
       - group_vars/etcd-networking.yaml
 
     roles:
-      - role: packages-transition-etcd
-        when: allow_package_installation|bool == true
-      - etcd-backup
+      - role: etcd-version
+      - role: packages-transition-etcd  # don' install packages if etcd version is not changing
+        when: >
+          (allow_package_installation|bool == true) and
+          (etcd_needs_upgrade is defined and etcd_needs_upgrade|bool == true)
+      - role: etcd-backup
       - role: etcd
         etcd_install_bin_name: etcd_v3_0
