--- a/ansible/roles/etcd/tasks/main.yaml
+++ b/ansible/roles/etcd/tasks/main.yaml
@@ -11,16 +11,6 @@
       - reload services
       - restart etcd service
 
-  - name: get etcd server version
-    command: curl --cert {{ etcd_certificates_cert_file }} --key {{ etcd_certificates_key_file }} --cacert {{ etcd_certificates_ca_file }} https://127.0.0.1:{{ etcd_service_client_port }}/version
-    register: etcd_version
-    when: upgrading is defined and upgrading|bool == true
-
-  - name: check if etcd needs to be upgraded
-    set_fact:
-      etcd_needs_upgrade: "{{ (etcd_version.stdout | from_json)['etcdserver'] != etcd_version }}"
-    when: upgrading is defined and upgrading|bool == true
-
   # force_etcd_restart=true to force restart
   - name: force restart {{etcd_install_bin_name }} service
     command: /bin/true
@@ -29,8 +19,7 @@
     when: >
       (force_etcd_restart is defined and force_etcd_restart|bool == true) or
       ((etcd_installation_rpm is defined and etcd_installation_rpm.changed == true or etcd_installation_deb is defined and etcd_installation_deb.changed == true) and
-      (upgrading is defined and upgrading|bool == true) and
-      (etcd_needs_upgrade is defined and etcd_needs_upgrade|bool == true ))
+      (upgrading is defined and upgrading|bool == true))
 
   - meta: flush_handlers  #Run handlers
 
@@ -40,8 +29,7 @@
     when: >
       (force_etcd_restart is defined and force_etcd_restart|bool == true) or
       ((etcd_installation_rpm is defined and etcd_installation_rpm.changed == true or etcd_installation_deb is defined and etcd_installation_deb.changed == true) and
-      (upgrading is defined and upgrading|bool == true) and
-      (etcd_needs_upgrade is defined and etcd_needs_upgrade|bool == true ))
+      (upgrading is defined and upgrading|bool == true))
 
   - name: verify {{ etcd_install_bin_name }} is running
     command: systemctl status {{ etcd_service_name }}
