--- a/ansible/roles/packages-cleanup/tasks/main.yaml
+++ b/ansible/roles/packages-cleanup/tasks/main.yaml
@@ -32,6 +32,14 @@
     retries: 1
     delay: 1
 
+  - name: remove kismatic-etcd yum package
+    yum: name=kismatic-etcd state=absent
+    when: "ansible_os_family == 'RedHat' and 'etcd' in group_names"
+    register: result
+    until: result|success
+    retries: 1
+    delay: 1
+
   - name: remove transition-etcd yum package
     yum: name=transition-etcd-{{ transition_etcd_yum_version }} state=absent
     when: "ansible_os_family == 'RedHat'"
@@ -68,6 +76,14 @@
   - name: install kismatic-docker-engine deb package
     apt: name=kismatic-docker-engine state=absent
     when: "ansible_os_family == 'Debian' and ('master' in group_names or 'worker' in group_names or 'ingress' in group_names or 'storage' in group_names)"
+    register: result
+    until: result|success
+    retries: 1
+    delay: 1
+
+  - name: remove kismatic-etcd etcd deb package
+    apt: name=kismatic-etcd state=absent
+    when: "ansible_os_family == 'Debian' and 'etcd' in group_names"
     register: result
     until: result|success
     retries: 1
