--- a/ansible/_etcd-k8s.yaml
+++ b/ansible/_etcd-k8s.yaml
@@ -13,5 +13,5 @@
       - role: packages-etcd
         when: allow_package_installation|bool == true
       - role: etcd-backup
-        when: etcd_needs_upgrade is defined and etcd_needs_upgrade|bool == true
+        when: upgrading is defined and upgrading|bool == true
       - etcd
