--- a/ansible/_etcd-networking.yaml
+++ b/ansible/_etcd-networking.yaml
@@ -11,5 +11,5 @@
 
     roles:
       - role: etcd-backup
-        when: etcd_needs_upgrade is defined and etcd_needs_upgrade|bool == true
+        when: upgrading is defined and upgrading|bool == true
       - etcd
